--- a/test/PopulationTest/CMakeLists.txt
+++ b/test/PopulationTest/CMakeLists.txt
@@ -8,11 +8,11 @@ include(ExternalDependencies)
 
 if(CMAKE_COMPILER_IS_GNUCXX)
     if (CMAKE_BUILD_TYPE STREQUAL "Release")
-        SET(CMAKE_CXX_FLAGS " -Wno-unused-variable -Wno-unused-result -DG4USE_STD11 -pipe -m64 -fsigned-char -fPIC -pthread -std=c++11")
+        SET(CMAKE_CXX_FLAGS " -Wno-unused-variable -Wno-unused-result -DG4USE_STD11 -pipe -m64 -fsigned-char -fPIC -pthread")
     endif(CMAKE_BUILD_TYPE STREQUAL "Release")
 
     if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-        SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall  -g -std=c++0x ")
+        SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g")
     endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
 
 endif(CMAKE_COMPILER_IS_GNUCXX)
@@ -31,7 +31,7 @@ include(MAS)
 include(Modeler)
 
 # Set C++ 11
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 set(PROJECT_SOURCE
     main.cc
