--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -11,6 +11,7 @@
 
 cmake_minimum_required(VERSION 3.1)
 
+set(CMAKE_CXX_STANDARD 17)
 add_subdirectory(InformationSystem)
 add_subdirectory(cReader)
 add_subdirectory(MAS)
