--- a/test/CustomTest/CMakeLists.txt
+++ b/test/CustomTest/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.1)
 project(FirstCatchTest)
 
 # Set C++ 11
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 set(PROJECT_SOURCE
 	main.cc
@@ -18,7 +18,7 @@ set(PROJECT_HEADER
 add_executable( firstTest ${PROJECT_SOURCE} ${PROJECT_HEADER})
 target_include_directories(firstTest PUBLIC ${CATCH_INCLUDE_DIR})
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 ")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
 #Copy a file
 add_custom_command(TARGET firstTest POST_BUILD
