Improve CMakeLists.txt for examples

--- a/example/TargetedAlphaTherapy/CMakeLists.txt
+++ b/example/TargetedAlphaTherapy/CMakeLists.txt
@@ -20,14 +20,6 @@ include(InformationSystem)
 include(MAS)
 include(Modeler)
 
-# define CPOP_DIR if needed
-
-find_package(CPOP CONFIG REQUIRED)
-foreach(USE_FILE ${CPOP_USE_FILE})
-	message(STATUS "Including ${USE_FILE}")
-	include(${USE_FILE})
-endforeach(USE_FILE)
-
 set(ALL_SOURCE 
 	src/main.cc
 	src/DetectorConstruction.cc
@@ -43,9 +35,7 @@ add_executable(${BINARY_NAME} ${ALL_SOURCE} ${ALL_HEADER})
 
 target_include_directories(${BINARY_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_compile_options(${BINARY_NAME} PUBLIC -Wall -pthread)
-target_link_libraries(${BINARY_NAME} PUBLIC
-  ${CPOP_LIB}
-)
+target_link_libraries(${BINARY_NAME} PUBLIC Platform_SMA Modeler)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ${CMAKE_BINARY_DIR}/example/TargetedAlphaTherapy)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/output DESTINATION ${CMAKE_BINARY_DIR}/example/TargetedAlphaTherapy)
