--- a/example/GeneratePopulation/CMakeLists.txt
+++ b/example/GeneratePopulation/CMakeLists.txt
@@ -18,12 +18,6 @@ include(InformationSystem)
 include(MAS)
 include(Modeler)
 
-find_package(CPOP CONFIG REQUIRED)
-foreach(USE_FILE ${CPOP_USE_FILE})
-	message(STATUS "Including ${USE_FILE}")
-	include(${USE_FILE})
-endforeach(USE_FILE)
-
 set(CONFIGFILE_SOURCE
 	src/main.cc
 	src/simulationEnvironment.cc
@@ -42,8 +36,6 @@ set(CONFIGFILE_HEADER
 add_executable(${BINARY_NAME} ${CONFIGFILE_SOURCE} ${CONFIGFILE_HEADER})
 target_include_directories(${BINARY_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_compile_options(${BINARY_NAME} PUBLIC -Wall -pthread)
-target_link_libraries(${BINARY_NAME} PUBLIC
-	${CPOP_LIB}
-)
+target_link_libraries(${BINARY_NAME} PUBLIC Platform_SMA Modeler)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ${CMAKE_BINARY_DIR})
