--- a/example/TargetedAlphaTherapy/CMakeLists.txt
+++ b/example/TargetedAlphaTherapy/CMakeLists.txt
@@ -11,6 +11,8 @@ cmake_minimum_required(VERSION 3.7)
 project(TargetedAlphaTherapy)
 set(BINARY_NAME targetedAlphaTherapy)
 
+set(CMAKE_CXX_STANDARD 17)
+
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake) # main (top) cmake dir
 
 include(cReader)
