--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ config/CPOP.sh
 example/GeneratePopulation/data/
 example/GeneratePopulation/IDCell.txt
 example/TargetedAlphaTherapy/output/
+example/TargetedAlphaTherapy/data/
 example/TargetedAlphaTherapy/IDCell.txt
 example/TargetedAlphaTherapy/MassesCell.txt
