Updated example targetedAlphaTherapy with new macro files and modification of .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ example/TargetedAlphaTherapy/output/
 example/TargetedAlphaTherapy/data/
 example/TargetedAlphaTherapy/IDCell.txt
 example/TargetedAlphaTherapy/MassesCell.txt
+example/TargetedAlphaTherapy/targetedAlphaTherapy
