--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@ build/
 CMakeLists.txt.user
 config/CPOP.sh
 example/GeneratePopulation/IDCell.txt
+example/HomogeneousRadiation/IDCell.txt
+example/HomogeneousRadiation/MassesCell.txt
+example/NanoparticleRadiation/IDCell.txt
+example/NanoparticleRadiation/MassesCell.txt
 example/TargetedAlphaTherapy/output/
 example/TargetedAlphaTherapy/IDCell.txt
 example/TargetedAlphaTherapy/MassesCell.txt
-example/TargetedAlphaTherapy/targetedAlphaTherapy
