--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(GeneratePopulation)
-add_subdirectory(HomogeneousRadiation)
+add_subdirectory(UniformRadiation)
 add_subdirectory(NanoparticleRadiation)
 add_subdirectory(TargetedAlphaTherapy)
