Updated default macro file

--- a/example/GeneratePopulation/macros/testConfig.cfg
+++ b/example/GeneratePopulation/macros/testConfig.cfg
@@ -23,7 +23,8 @@ nucleusMaterials   = G4_WATER
 internalRadius = 0
 externalRadius = 95
 nbCell         = 60000
-#18124
+gridDistribution = false
+
 [MeshProperties]
 maxNumberOfFacetPerCell = 1000
 
