New example GenerateCompactedPopulation

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(GeneratePopulation)
 add_subdirectory(UniformRadiation)
 add_subdirectory(NanoparticleRadiation)
 add_subdirectory(TargetedAlphaTherapy)
+add_subdirectory(GenerateCompactedPopulation)
