Refactored TAT example to use custom Action class. It allows to modify the classes only for example instead of all CPOP, as before. Action classes in UserAction folder were replaced by the original cpop 2.0 ones

--- a/example/TargetedAlphaTherapy/CMakeLists.txt
+++ b/example/TargetedAlphaTherapy/CMakeLists.txt
@@ -24,11 +24,19 @@ set(ALL_SOURCE
 	src/main.cc
 	src/DetectorConstruction.cc
 	src/DetectorConstructionMessenger.cc
+	src/CpopActionInitialization.cc
+	src/CpopSteppingAction.cc
+	src/CpopEventAction.cc
+	src/CpopRunAction.cc
 )
 
 set(ALL_HEADER
 	include/DetectorConstruction.hh
 	include/DetectorConstructionMessenger.hh
+	include/CpopActionInitialization.hh
+	include/CpopSteppingAction.hh
+	include/CpopEventAction.hh
+	include/CpopRunAction.hh
 )
 
 add_executable(${BINARY_NAME} ${ALL_SOURCE} ${ALL_HEADER})
