--- a/example/NanoparticleRadiation/CMakeLists.txt
+++ b/example/NanoparticleRadiation/CMakeLists.txt
@@ -1,31 +1,25 @@
-#########################################################
-#Copyright (C): Henri Payno, Axel Delsol, 				#
-#Laboratoire de Physique de Clermont UMR 6533 CNRS-UCA	#
-#														#
-#This software is distributed under the terms			#
-#of the GNU Lesser General  Public Licence (LGPL)		#
-#See LICENSE.md for further details						#
-#########################################################
-# CMakeLists.txt
-#
-# Template project example
-#
-#------------------------------------------------------------------------------
-
-cmake_minimum_required(VERSION 3.1)
+##########################################################
+# Copyright (C): Henri Payno, Axel Delsol, Alexis Pereda #
+# Laboratoire de Physique de Clermont UMR 6533 CNRS-UCA  #
+#                                                        #
+# This software is distributed under the terms           #
+# of the GNU Lesser General  Public Licence (LGPL)       #
+# See LICENSE.md for further detais                      #
+##########################################################
+cmake_minimum_required(VERSION 3.7)
 
 project(ComplexRadiation)
 set(BINARY_NAME complexRadiation)
 
-# define CPOP_DIR if needed
+set(CMAKE_CXX_STANDARD 17)
 
-find_package(CPOP CONFIG REQUIRED)
-foreach(USE_FILE ${CPOP_USE_FILE})
-	message(STATUS "Including ${USE_FILE}")
-	include(${USE_FILE})
-endforeach(USE_FILE)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake) # main (top) cmake dir
 
-### ----------------------------- SOURCE  --------------------------------------###
+include(cReader)
+include(InformationSystem)
+include(MAS)
+include(Modeler)
+
 set(ALL_SOURCE 
 	src/main.cc
 	src/DetectorConstruction.cc
@@ -38,18 +32,13 @@ set(ALL_HEADER
     include/DetectorConstructionMessenger.hh
 )
 
-### ------------------ Executable definition
-add_executable(${BINARY_NAME}
-  ${ALL_SOURCE} ${ALL_HEADER}
-)
+add_executable(${BINARY_NAME} ${ALL_SOURCE} ${ALL_HEADER})
 
-### ------------------ LINK external libraries
-TARGET_LINK_LIBRARIES(${BINARY_NAME}
-  ${CPOP_LIB}
-)
-
+target_include_directories(${BINARY_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_compile_options(${BINARY_NAME} PUBLIC -Wall -pthread)
+target_link_libraries(${BINARY_NAME} PUBLIC Platform_SMA Modeler)
 
 #Copy data directory for user convenience
-file(COPY ${CMAKE_SOURCE_DIR}/data DESTINATION ${CMAKE_BINARY_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -pthread -Wno-unused-variable")
